--- a/skip/index.html
+++ b/skip/index.html
@@ -56,7 +56,7 @@
             </div>
             <div id="footer" class="center">
                 <p class="text">
-                    In caso di problemi <a href="mailto:info@gate42.it">clicca qui</a>
+                    Per info e supporto <a href="mailto:info@gate42.it">clicca qui</a>
                 </p>
             </div>
             <img id="img-buffer" style="display: none;" src="logo_qr.png">
