--- a/skip/index.html
+++ b/skip/index.html
@@ -29,6 +29,7 @@
         <link rel='stylesheet' media='screen and (max-width: 1024px)' href='media.css' />
     </head>
     <body>
+        <div id="loader"  style="display: none;" class="overlay"></div>
         <div id="page">
             <div id="head" class="center">
                 <div id="logo">
@@ -61,6 +62,6 @@
             </div>
             <img id="img-buffer" style="display: none;" src="logo_qr.png">
             <div id="canvas-qrcode" style="display: none;"></div>
-        </div>        
+        </div>
     </body>
 </html>
